# docs-qa-system

./: .example.env  .gitignore  Dockerfile  LICENSE  Makefile  README.md  description.txt  docker-compose.yml  mermaid_diagram.md  pyproject.toml
batch_embedder/app/: main.py
batch_embedder/app/core/: logger.py  settings.py
batch_embedder/app/embeddings/: README.md  embedding_generator.py
batch_embedder/app/vectordb/: chunkenizer.py  utils.py  vectordb.py
chat_cli/: README.md  __init__.py
chat_cli/app/: __init__.py  main.py
chat_cli/app/agents/: README.md  __init__.py  hr_policies_agent.py  labor_rules_agent.py  product_manual_agent.py
chat_cli/app/core/: __init__.py  logger.py  settings.py
chat_cli/app/teams/: __init__.py  rh_team_specialist.py
chat_cli/app/vectordb/: __init__.py  qdrant_factory.py
data/hr-policies/: employee_handbook.md  hr_rewards.md
data/labor-rules/: labor_rules_reference.md  overtime_guideline.md
data/product-manual/: employee_self_service_portal.md  mobile_app_guide.md
